# animated-cursor-theme-collection

./: Makefile.am  README.md  autogen.sh  configure.ac
themes/: Makefile.am  import.sh
